5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1585_2895.log
== TEST (2019-04-01 21:11:05) 
-- CODE:
1 = float(input("Quantidade de jogos: "))
2 = float(input("Valor unitario de cada jogo: "))
3 = float(input("Valor do frete: "))
print((1*2)+3)
-- ERROR:
File "XXXX", line 1
    1 = float(input())
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:11:31) 
-- CODE:
1 = float(input("quantidade de jogos: "))
2 = float(input("valor unitario de cada jogo: "))
3 = float(input("valor do frete: "))
print((1*2)+3)
-- ERROR:
File "XXXX", line 1
    1 = float(input())
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:12:20) 
-- CODE:
1 = float(input("quantidade de jogos? "))
2 = float(input("valor unitario de cada jogo? "))
3 = float(input("valor do frete? "))
print((1*2)+3)
-- ERROR:
File "XXXX", line 1
    1 = float(input())
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:14:31) 
-- CODE:
a = float(input("quantidade de jogos? "))
b = float(input("valor unitario de cada jogo? "))
c = float(input("valor do frete? "))
print((a*b)+c)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:14:32) 
-- CODE:
a = float(input("quantidade de jogos? "))
b = float(input("valor unitario de cada jogo? "))
c = float(input("valor do frete? "))
print((a*b)+c)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:15:13) 
-- CODE:
a = float(input("quantidade de jogos? "))
b = float(input("valor unitario de cada jogo? "))
c = float(input("valor do frete? "))
print((a*b)+c)
-- EXECUTION TIME:
0.166683
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
